--- a/theoryassignment3-4/package.json
+++ b/theoryassignment3-4/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/cli-server-api": "^20.0.2",
-    "@react-navigation/native": "^7.1.22",
+    "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.2",
+    "@react-navigation/stack": "^7.6.12",
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
@@ -24,6 +25,7 @@
   },
   "private": true,
   "devDependencies": {
-    "@react-native-community/cli": "^20.0.2"
+    "@react-native-community/cli": "^20.0.2",
+    "expo-module-scripts": "^5.0.8"
   }
 }
